# mcp-for-triton-kernel

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  mcp_config_example.json  pyproject.toml
.github/workflows/: pr-size-labeler.yml  pre-commit.yml
docs/: execution_guide.md  handoff.md  initial_plan.md  mcp_tools_design.md  state_workflow_guide.md
mcp_for_triton_kernel/: .gitkeep  __init__.py  __main__.py  server.py  state.py
mcp_for_triton_kernel/kernel/: .gitkeep  triton_add_kernel_v1.py  triton_add_kernel_v2.py  triton_add_kernel_v3.py  triton_add_kernel_v4.py  triton_attention_kernel_v1.py  triton_attention_kernel_v2.py  triton_attention_kernel_v3.py  triton_attention_kernel_v4.py  triton_mul_kernel_v1.py  triton_mul_kernel_v2.py  triton_softmax_kernel_v1.py  triton_softmax_kernel_v2.py  triton_softmax_kernel_v3.py  triton_softmax_kernel_v4.py  triton_sub_kernel_v1.py  triton_sub_kernel_v2.py
mcp_for_triton_kernel/knowledge/: __init__.py  overview.md  torch_ops.json  triton_syntax.md
mcp_for_triton_kernel/log/: .gitkeep  triton_add_log.md  triton_attention_log.md  triton_mul_log.md  triton_softmax_log.md  triton_sub_log.md
mcp_for_triton_kernel/tests/: .gitkeep  conftest.py  test_add_kernel.py  test_attention_kernel.py  test_mul_kernel.py  test_softmax_kernel.py  test_sub_kernel.py
mcp_for_triton_kernel/tools/: __init__.py  execution.py  info.py  workflow.py
mcp_for_triton_kernel/utils/: __init__.py  context_manager.py  runner.py
