[project]
name = "mcp-for-triton-kernel"
version = "0.1.0"
description = "Custom MCP Server for triton code analysis and torch ops mapping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.0",
    "torch>=2.0.0",
    "triton>=2.1.0",
]

[project.scripts]
triton-mcp = "mcp_for_triton_kernel.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_for_triton_kernel"]
